# id3rs

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  sonar-project.properties
include/: id3.h  module.modulemap
src/: ffi.rs  frame.rs  lib.rs  main.rs  mp3.rs  mp3_frame.rs  mp3_parser.rs  parsers.rs  patterns.rs
tests/: frame_test.rs  id3_test.rs  parsers_test.rs  streaming_test.rs
