[package]
name = "id3rs"
version = "0.1.1"
authors = ["Bas van der Hoek <bas@hoek.com>"]
edition = "2021"

[dependencies]
nom = "7"
log = "0.4.14"
env_logger = "0.8.4"
clap = "4.5"
tempfile = "3.2"
ursual = { git = "https://github.com/bzhoek/ursual.git" }

[dev-dependencies]
assert_matches = "1.5"
rand = "0.8"

[lib]
crate-type = ["lib", "staticlib"]
